--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=3000
 API_VERSION=v1
 
-# Database Configuration
+# Database Configuration [REQUIRED]
 DATABASE_URL="postgresql://postgres:password@localhost:5432/honojs_db"
 
 # Redis Configuration
@@ -12,18 +12,12 @@ REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
 
-# JWT Configuration
+# JWT Configuration [REQUIRED]
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
-JWT_ACCESS_TOKEN_EXPIRY=15m
-JWT_REFRESH_TOKEN_EXPIRY=7d
+JWT_ACCESS_TOKEN_EXPIRY=900
+JWT_REFRESH_TOKEN_EXPIRY=72000
 
-# Upload Configuration
-UPLOAD_DIR=./uploads
-MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
-FILE_URL_PREFIX=/uploads
-
-# Doku Payment Gateway Configuration
+# Doku Payment Gateway Configuration [REQUIRED]
 DOKU_CLIENT_ID=your_doku_client_id
 DOKU_SECRET_KEY=your_doku_secret_key
 DOKU_ENVIRONMENT=sandbox
@@ -32,10 +26,10 @@ DOKU_WEBHOOK_SECRET=your_webhook_secret
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 
-# Rate Limiting
+# Rate Limiting Configuration
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# Logging
+# Logging level: error, warn, info, or debug
 LOG_LEVEL=info
 LOG_FORMAT=json
