--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "description": "Production-ready Hono.js boilerplate with authentication, PostgreSQL, Redis, and payment integration",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
+    "dev": "bun run --hot src/index.ts",
+    "start": "bun dist/index.js",
     "build": "tsc",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test": "bun test",
+    "test:coverage": "bun test --coverage",
     "db:pull": "npx prisma db pull",
     "db:generate": "npx prisma generate --schema=prisma/schema.prisma",
     "db:seeding": "npx prisma db seed",
@@ -41,14 +41,13 @@
     "docker-compose"
   ],
   "dependencies": {
-    "@hono/node-server": "^1.13.5",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "7.2",
     "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "decimal.js": "^10.6.0",
     "dotenv": "^17.2.3",
-    "hono": "^4.6.5",
+    "hono": "^4.11.4",
     "hono-simple-di": "^0.2.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
@@ -59,9 +58,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bun": "^1.3.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "@vitest/coverage-v8": "^2.1.8",
