--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "docker-compose"
   ],
   "dependencies": {
+    "@hono/swagger-ui": "^0.5.3",
+    "@hono/zod-openapi": "^1.2.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "7.2",
     "axios": "^1.13.2",
@@ -65,6 +67,7 @@
     "@typescript-eslint/parser": "^8.15.0",
     "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.15.0",
+    "husky": "^9.1.7",
     "prettier": "^3.4.1",
     "prisma": "7.2",
     "tsx": "^4.21.0",
