chore: update and add linting configuration files
- Update ESLint and Prettier configurations
- Add Husky git hooks for commit-msg, pre-commit, and pre-push
- Add lint-staged configuration for pre-commit linting
- Add commitlint configuration for conventional commits
- Add new ESLint configuration file

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,9 +2,5 @@
   "semi": true,
   "trailingComma": "es5",
   "singleQuote": true,
-  "printWidth": 100,
-  "tabWidth": 2,
-  "useTabs": false,
-  "arrowParens": "always",
-  "endOfLine": "lf"
+  "tabWidth": 2
 }
