--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "prepare": "husky"
   },
   "keywords": [
     "honojs",
@@ -59,6 +60,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bun": "^1.3.6",
     "@types/jsonwebtoken": "^9.0.7",
@@ -68,6 +71,7 @@
     "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.15.0",
     "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.4.1",
     "prisma": "7.2",
     "tsx": "^4.21.0",
